# atad-prj-url-shortener

./: .gitignore  LICENSE  README.md
url-shortener/: .env.example  Cargo.toml  url_shortener.db
url-shortener/migrations/: 20251109175150_create_urls.sql  20260110214723_create_urls_stats.sql  20260122212341_create_urls.sql  20260122212351_create_urls_stats.sql
url-shortener/src/: config.rs  error.rs  main.rs
url-shortener/src/db/: queries.rs
url-shortener/src/handlers/: analytics.rs  mod.rs  redirect.rs  shorten.rs  web.rs
url-shortener/src/models/: mod.rs  stats.rs  url.rs
url-shortener/src/services/: mod.rs  qr_code.rs  rate_limiter.rs  shorten.rs
url-shortener/src/templates/: mod.rs
url-shortener/static/css/: styles.css
url-shortener/static/js/: app.js
url-shortener/templates/: dashboard.html  index.html
